--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -73,8 +73,7 @@ body {
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
-.reveal video,
-.reveal iframe {
+.reveal video {
   max-width: 95%;
   max-height: 95%; }
 
@@ -157,7 +156,6 @@ body {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
   word-wrap: normal; }
 
 .reveal table {
