--- a/assets/css/theme/nap.css
+++ b/assets/css/theme/nap.css
@@ -33,6 +33,7 @@ body {
 /*********************************************
  * HEADERS
  *********************************************/
+
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -40,40 +41,46 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #222;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-weight: 600;
+  color: #fff;
+  font-family: Avenir-Medium, gillsans-light, "Source Sans Pro", Helvetica, sans-serif;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 .reveal h1 {
-  font-family: Chronicle Display Light;
+  font-family: ChronicleDisplay-XLight;
   color: #fff;
-  font-size: 70px;
-  letter-spacing: 0px;
+  font-size: 75px;
+  letter-spacing: 0.1px;
+  position: relative;
+  text-align: left;
+  letter-spacing: 0.02em;
+  top: 200px;
 }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.3em;}
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 0.5em;
+  margin: 30px 0 0 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
 
 .reveal h4 {
-  font-size: 1em; }
-
-.reveal h1 {
-  text-shadow: none; }
+  font-size: 0.8em; }
 
 /*********************************************
  * OTHER
  *********************************************/
 .reveal p {
-  margin: 20px 0;
-  line-height: 1.3; }
+  margin: 60px 0 30px;
+  line-height: 1;
+  color: #ffffff;
+}
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
@@ -91,9 +98,15 @@ body {
 .reveal ol,
 .reveal dl,
 .reveal ul {
+  font-family: Avenir-Medium, gillsans-light, "Source Sans Pro", Helvetica, sans-serif;
+  letter-spacing: 0.5px;
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em; }
+  font-size: 1em;
+  line-height: 50px;
+  margin-top: 70px;
+  color: #ffffff;
+}
 
 .reveal ol {
   list-style-type: decimal; }
@@ -102,7 +115,7 @@ body {
   list-style-type: disc; }
 
 .reveal ul ul {
-  list-style-type: square; }
+  list-style-type: circle; }
 
 .reveal ul ul ul {
   list-style-type: circle; }
@@ -111,8 +124,10 @@ body {
 .reveal ul ol,
 .reveal ol ol,
 .reveal ol ul {
+  margin-top: 20px;
   display: block;
-  margin-left: 40px; }
+  font-size: 1em;
+  margin-left: 50px; }
 
 .reveal dt {
   font-weight: bold; }
@@ -147,20 +162,24 @@ body {
   width: 90%;
   margin: 20px auto;
   text-align: left;
-  font-size: 0.55em;
+  font-size: 0.5em;
   font-family: monospace;
-  line-height: 1.2em;
+  line-height: 1.4em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  box-shadow: none;
+}
 
 .reveal code {
   font-family: monospace; }
 
 .reveal pre code {
   display: block;
-  padding: 5px;
+  padding: 20px;
   overflow: auto;
-  word-wrap: normal; }
+  word-wrap: normal;
+  margin: 15px;
+  border-radius: 5px;
+}
 
 .reveal table {
   margin: auto;
@@ -206,16 +225,18 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #2a76dd;
+  color: #ffffff;
+  font-family: Avenir-Medium, gillsans-light, "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 0.6em;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+}
 
 .reveal a:hover {
-  color: #6ca0e8;
-  text-shadow: none;
-  border: none; }
+  border-bottom: 2px solid #ffffff;
+  -webkit-transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
+  transition: 0.2s ease; }
+}
 
 .reveal .roll span:after {
   color: #fff;
@@ -226,6 +247,11 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
+  border-radius: 5px;
+}
+
+.reveal .mugshot img{
+  border-radius: 100px;
 }
 
 .reveal section img.plain {
@@ -280,17 +306,30 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #2a76dd;
+  background: #ffffff;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 
 /* NAP Styles */
+.profile {
+  margin: 0 auto;
+}
+.mugshot{
+  width: 30%;
+  display: inline-block;
+}
 .mugshot img {
   border-radius: 100px;
   overflow: hidden;
+  width: 60%;
 }
 .controls {
   display: none !important;
+}
+.shadow {
+  -moz-box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
+  -webkit-box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
+  box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
 }
