--- a/assets/css/theme/nap.css
+++ b/assets/css/theme/nap.css
@@ -65,7 +65,7 @@ body {
 
 .reveal h3 {
   font-size: 0.5em;
-  margin: 30px 0 0 0;
+  margin: 30px 0;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
@@ -77,7 +77,7 @@ body {
  * OTHER
  *********************************************/
 .reveal p {
-  margin: 60px 0 30px;
+  margin: 30px 0 30px;
   line-height: 1;
   color: #ffffff;
 }
@@ -129,6 +129,13 @@ body {
   font-size: 1em;
   margin-left: 50px; }
 
+.reveal li{
+  display: inline;
+  margin-right: 50px;
+}
+.reveal li:last-child{
+  margin-right: 0;
+}
 .reveal dt {
   font-weight: bold; }
 
