--- a/assets/css/theme/nap.css
+++ b/assets/css/theme/nap.css
@@ -1,7 +1,9 @@
 /**
  * NAP theme for reveal.js.
  */
-@import url(../../lib/font/source-sans-pro/source-sans-pro.css);
+/*@import url(../../lib/font/source-sans-pro/source-sans-pro.css);*/
+@import url(../../lib/font/Chronicle/chronicle.css);
+@import url(../../lib/font/Avenir/avenir.css);
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -13,7 +15,7 @@ body {
   background-color:#000; }
 
 .reveal {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Chronicle", Helvetica, sans-serif;
   font-size: 38px;
   font-weight: normal;
   color: #222; }
