--- a/assets/css/theme/nap.css
+++ b/assets/css/theme/nap.css
@@ -1,7 +1,7 @@
 /**
  * NAP theme for reveal.js.
  */
-/*@import url(../../lib/font/source-sans-pro/source-sans-pro.css);*/
+@import url(../../lib/font/source-sans-pro/source-sans-pro.css);
 @import url(../../lib/font/Chronicle/chronicle.css);
 @import url(../../lib/font/Avenir/avenir.css);
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
@@ -41,8 +41,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
-  font-family: Avenir-Medium, gillsans-light, "Source Sans Pro", Helvetica, sans-serif;
+
   line-height: 1.2;
   letter-spacing: normal;
   text-shadow: none;
@@ -50,7 +49,7 @@ body {
 }
 
 .reveal h1 {
-  font-family: ChronicleDisplay-XLight;
+  font-family: "Chronicle";
   color: #fff;
   font-size: 75px;
   letter-spacing: 0.1px;
@@ -71,7 +70,16 @@ body {
 }
 
 .reveal h4 {
-  font-size: 0.8em; }
+  font-size: 0.8em;
+}
+
+.reveal .subhead {
+  color: #fff;
+  font-family: "Avenir", Helvetica, sans-serif;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 0.3em; 
+}
 
 /*********************************************
  * OTHER
@@ -98,14 +106,14 @@ body {
 .reveal ol,
 .reveal dl,
 .reveal ul {
-  font-family: Avenir-Medium, gillsans-light, "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Avenir", Helvetica, sans-serif;
   letter-spacing: 0.5px;
   display: inline-block;
   text-align: left;
   font-size: 1em;
   line-height: 50px;
-  margin-top: 70px;
   color: #ffffff;
+  text-align: center;
 }
 
 .reveal ol {
