--- a/assets/css/theme/nap.css
+++ b/assets/css/theme/nap.css
@@ -41,7 +41,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-
+  font-family: "Avenir", Helvetica, sans-serif;
   line-height: 1.2;
   letter-spacing: normal;
   text-shadow: none;
@@ -71,6 +71,13 @@ body {
 
 .reveal h4 {
   font-size: 0.8em;
+}
+.reveal h5 {
+  color: #fff;
+  font-family: "Avenir", Helvetica, sans-serif;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  font-size: 0.5em; 
 }
 
 .reveal .subhead {
@@ -113,7 +120,6 @@ body {
   font-size: 1em;
   line-height: 50px;
   color: #ffffff;
-  text-align: center;
 }
 
 .reveal ol {
@@ -345,7 +351,7 @@ body {
   display: none !important;
 }
 .shadow {
-  -moz-box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
-  -webkit-box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
-  box-shadow: 14px 14px 0px 2px rgba(150, 100, 80, 0.6);
+  -moz-box-shadow: 14px 14px 0px 2px rgba(135, 62, 62, 0.6);
+  -webkit-box-shadow: 14px 14px 0px 2px rgba(135, 62, 62, 0.6);
+  box-shadow: 14px 14px 0px 2px rgba(135, 62, 62, 0.6);
 }
